--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
     "seed": "node ./prisma/seed.js"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.4.0",
     "@heroicons/react": "^2.0.18",
-    "@prisma/client": "^5.7.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.10.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/postgres": "^0.5.1",
+    "add": "^2.0.6",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0-rc19",
+    "form": "^0.2.4",
     "lucide-react": "^0.314.0",
     "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.50.1",
+    "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
