--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@auth/prisma-adapter": "^1.4.0",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^5.12.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -21,6 +21,7 @@
     "add": "^2.0.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "caniuse-lite": "^1.0.30001605",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0-rc19",
@@ -28,6 +29,8 @@
     "lucide-react": "^0.314.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.13",
+    "npm-check-updates": "^16.14.18",
+    "prisma": "^5.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
@@ -47,7 +50,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
-    "prisma": "^5.7.1",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
